--- a/code/08_recurrent_networks.ipynb
+++ b/code/08_recurrent_networks.ipynb
@@ -39,7 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +103,7 @@
        "       85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,31 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "a = a.reshape((len(a), -1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(100, 1)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.shape"
    ]
   },
   {
@@ -143,11 +130,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[0],\n",
-       "       [1],\n",
-       "       [2],\n",
-       "       [3],\n",
-       "       [4]])"
+       "(100, 1)"
       ]
      },
      "execution_count": 7,
@@ -156,16 +139,124 @@
     }
    ],
    "source": [
-    "a[:5]"
+    "a.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array([[ 0],\n",
+      "       [ 1],\n",
+      "       [ 2],\n",
+      "       [ 3],\n",
+      "       [ 4],\n",
+      "       [ 5],\n",
+      "       [ 6],\n",
+      "       [ 7],\n",
+      "       [ 8],\n",
+      "       [ 9],\n",
+      "       [10],\n",
+      "       [11],\n",
+      "       [12],\n",
+      "       [13],\n",
+      "       [14],\n",
+      "       [15],\n",
+      "       [16],\n",
+      "       [17],\n",
+      "       [18],\n",
+      "       [19],\n",
+      "       [20],\n",
+      "       [21],\n",
+      "       [22],\n",
+      "       [23],\n",
+      "       [24],\n",
+      "       [25],\n",
+      "       [26],\n",
+      "       [27],\n",
+      "       [28],\n",
+      "       [29],\n",
+      "       [30],\n",
+      "       [31],\n",
+      "       [32],\n",
+      "       [33],\n",
+      "       [34],\n",
+      "       [35],\n",
+      "       [36],\n",
+      "       [37],\n",
+      "       [38],\n",
+      "       [39],\n",
+      "       [40],\n",
+      "       [41],\n",
+      "       [42],\n",
+      "       [43],\n",
+      "       [44],\n",
+      "       [45],\n",
+      "       [46],\n",
+      "       [47],\n",
+      "       [48],\n",
+      "       [49],\n",
+      "       [50],\n",
+      "       [51],\n",
+      "       [52],\n",
+      "       [53],\n",
+      "       [54],\n",
+      "       [55],\n",
+      "       [56],\n",
+      "       [57],\n",
+      "       [58],\n",
+      "       [59],\n",
+      "       [60],\n",
+      "       [61],\n",
+      "       [62],\n",
+      "       [63],\n",
+      "       [64],\n",
+      "       [65],\n",
+      "       [66],\n",
+      "       [67],\n",
+      "       [68],\n",
+      "       [69],\n",
+      "       [70],\n",
+      "       [71],\n",
+      "       [72],\n",
+      "       [73],\n",
+      "       [74],\n",
+      "       [75],\n",
+      "       [76],\n",
+      "       [77],\n",
+      "       [78],\n",
+      "       [79],\n",
+      "       [80],\n",
+      "       [81],\n",
+      "       [82],\n",
+      "       [83],\n",
+      "       [84],\n",
+      "       [85],\n",
+      "       [86],\n",
+      "       [87],\n",
+      "       [88],\n",
+      "       [89],\n",
+      "       [90],\n",
+      "       [91],\n",
+      "       [92],\n",
+      "       [93],\n",
+      "       [94],\n",
+      "       [95],\n",
+      "       [96],\n",
+      "       [97],\n",
+      "       [98],\n",
+      "       [99]])\n"
+     ]
+    }
+   ],
    "source": [
-    "from keras.preprocessing.sequence import TimeseriesGenerator"
+    "a[:5]\n",
+    "pprint(a)"
    ]
   },
   {
@@ -174,7 +265,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lags = 3"
+    "#from keras.preprocessing.sequence import TimeseriesGenerator\n",
+    "from tensorflow.keras.preprocessing.sequence  import TimeseriesGenerator"
    ]
   },
   {
@@ -183,42 +275,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = TimeseriesGenerator(a, a, length=lags, batch_size=5)"
+    "lags = 3"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = TimeseriesGenerator(a, a, length=lags, batch_size=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(array([[[0],\n",
-      "        [1],\n",
-      "        [2]],\n",
-      "\n",
-      "       [[1],\n",
-      "        [2],\n",
-      "        [3]],\n",
-      "\n",
-      "       [[2],\n",
-      "        [3],\n",
-      "        [4]],\n",
-      "\n",
-      "       [[3],\n",
-      "        [4],\n",
-      "        [5]],\n",
-      "\n",
-      "       [[4],\n",
-      "        [5],\n",
-      "        [6]]]),\n",
-      " array([[3],\n",
-      "       [4],\n",
-      "       [5],\n",
-      "       [6],\n",
-      "       [7]]))\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -228,9 +310,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-02-16 14:52:05.581052: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-02-16 14:52:05.628438: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-02-16 14:52:09.251130: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import Sequential\n",
     "from keras.layers import SimpleRNN, LSTM, Dense"
@@ -238,9 +331,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'lags' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m model \u001b[38;5;241m=\u001b[39m Sequential()\n\u001b[1;32m      2\u001b[0m model\u001b[38;5;241m.\u001b[39madd(SimpleRNN(\u001b[38;5;241m100\u001b[39m, activation\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrelu\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m----> 3\u001b[0m                     input_shape\u001b[38;5;241m=\u001b[39m(\u001b[43mlags\u001b[49m, \u001b[38;5;241m1\u001b[39m)))\n\u001b[1;32m      4\u001b[0m model\u001b[38;5;241m.\u001b[39madd(Dense(\u001b[38;5;241m1\u001b[39m, activation\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlinear\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m      5\u001b[0m model\u001b[38;5;241m.\u001b[39mcompile(optimizer\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124madagrad\u001b[39m\u001b[38;5;124m'\u001b[39m, loss\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmse\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      6\u001b[0m               metrics\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmae\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'lags' is not defined"
+     ]
+    }
+   ],
    "source": [
     "model = Sequential()\n",
     "model.add(SimpleRNN(100, activation='relu',\n",
@@ -1846,7 +1951,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1860,7 +1965,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
